# libcxxcanard

./: .clang-format  .clang-tidy  .git-old  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  Makefile  README.md  README_ru.md  arduino_build.json  arduino_list.txt  arduino_pack.py  library.properties  requirements.dev.txt
cyphal/: CMakeLists.txt  cyphal.cpp  cyphal.h  cyphal.tpp  definitions.cpp  definitions.h  interfaces.h  types.hpp
cyphal/allocators/: allocator.cpp  allocator.h
cyphal/allocators/o1/: o1_allocator.cpp  o1_allocator.h
cyphal/allocators/sys/: sys_allocator.cpp  sys_allocator.h
cyphal/node/: node_info_handler.cpp  node_info_handler.h  registers_access.hpp  registers_handler.hpp  registers_utils.hpp
cyphal/providers/: F4CAN.cpp  F4CAN.h  FDCAN_generic.cpp  FDCAN_generic.h  FDCAN_sizes.cpp  G4CAN.cpp  G4CAN.h  LinuxCAN.cpp  LinuxCAN.h  provider.cpp  provider.h
cyphal/subscriptions/: callbacks.h  subscription.cpp  subscription.h
docs/: .gitignore  Doxyfile  api.rst  arduino.rst  conf.py  dsdl.rst  examples.rst  index.rst  installation.rst  linux.rst
examples/: .gitignore  cyphal_types.cmake  full_example.ino  simple_echo.ino
examples/Arduino/: README.md  README_ru.md
examples/Arduino/full_example/: full_example.ino
examples/Arduino/service_echo/: service_echo.ino
examples/Arduino/simple_echo/: simple_echo.ino
examples/Linux/: CMakeLists.txt  README.md  README_ru.md  full_example.cpp  service_echo.cpp  simple_echo.cpp
examples/STM32HAL/: README.md  README_ru.md
examples/hbeat/: CMakeLists.txt  Makefile  hbeat_example  heartbeat_sub.cpp
libs/libcanard/: canard.h
libs/nunavut/support/: serialization.h
libs/o1heap/: o1heap.c
libs/reg/: __init__.py
libs/uavcan/: __init__.py
libs/uavcan/_register/: Access_1_0.h  List_1_0.h  Name_1_0.h  Value_1_0.h
libs/uavcan/diagnostic/: Record_1_0.h  Record_1_0.py  Record_1_1.h  Record_1_1.py  Severity_1_0.h  Severity_1_0.py  __init__.py
libs/uavcan/file/: Error_1_0.h  Error_1_0.py  GetInfo_0_1.h  GetInfo_0_2.h  GetInfo_0_2.py  List_0_1.h  List_0_1.py  List_0_2.h  List_0_2.py  Modify_1_0.h  Modify_1_0.py  Modify_1_1.h  Path_1_0.h  Path_1_0.py  Path_2_0.h  Path_2_0.py  Read_1_0.h  Read_1_0.py  Read_1_1.h  Read_1_1.py  Write_1_0.h  Write_1_0.py  Write_1_1.h  Write_1_1.py  __init__.py
libs/uavcan/internet/: __init__.py
libs/uavcan/metatransport/: __init__.py
libs/uavcan/node/: ExecuteCommand_1_0.h  ExecuteCommand_1_1.h  ExecuteCommand_1_1.py  ExecuteCommand_1_2.h  ExecuteCommand_1_2.py  ExecuteCommand_1_3.h  ExecuteCommand_1_3.py  GetInfo_1_0.h  GetInfo_1_0.py  GetTransportStatistics_0_1.h  GetTransportStatistics_0_1.py  Health_1_0.h  Health_1_0.py  Heartbeat_1_0.h  Heartbeat_1_0.py  ID_1_0.h  ID_1_0.py  IOStatistics_0_1.h  IOStatistics_0_1.py  Mode_1_0.h  Version_1_0.h  Version_1_0.py  __init__.py
libs/uavcan/pnp/: NodeIDAllocationData_1_0.h  NodeIDAllocationData_2_0.h  NodeIDAllocationData_2_0.py  __init__.py
libs/uavcan/primitive/: Empty_1_0.h  Empty_1_0.py  String_1_0.h  String_1_0.py  Unstructured_1_0.h  Unstructured_1_0.py  __init__.py
libs/uavcan/register/: Access_1_0.py  List_1_0.py  Name_1_0.py  Value_1_0.py  __init__.py
libs/uavcan/si/: __init__.py
libs/uavcan/time/: GetSynchronizationMasterInfo_0_1.h  GetSynchronizationMasterInfo_0_1.py  Synchronization_1_0.h  Synchronization_1_0.py  SynchronizedTimestamp_1_0.h  SynchronizedTimestamp_1_0.py  TAIInfo_0_1.h  TAIInfo_0_1.py  TimeSystem_0_1.h  TimeSystem_0_1.py  __init__.py
libs/voltbro/: __init__.py
libs/voltbro/battery/: __init__.py  state_1_0.h
libs/voltbro/config/: __init__.py
libs/voltbro/echo/: echo_msg_1_0.h  echo_msg_1_0.py  echo_service_1_0.h  echo_service_1_0.py
libs/voltbro/foc/: command_1_0.h  command_1_0.py  specific_control_1_0.h  specific_control_1_0.py  state_simple_1_0.h  state_simple_1_0.py
libs/voltbro/freeflyer/: __init__.py
libs/voltbro/hmi/: __init__.py  beeper_service_1_0.h  beeper_service_1_0.py  led_service_1_0.py
nunavut_templates/cxxcanard_traits/: ServiceType.j2  StructureType.j2  definitions.j2
src/: README.md  cyphal.cpp  cyphal.h  cyphal_common_types.hpp  libcanard  nunavut  o1heap  reg  uavcan  utils.h
src/libcanard/: CMakeLists.txt
src/nunavut/support/: serialization.h
src/o1heap/: CMakeLists.txt  o1heap.h
src/reg/: __init__.py
src/reg/udral/: __init__.py
src/uavcan/: __init__.py
src/uavcan/_register/: Access_1_0.hpp  List_1_0.h  List_1_0.hpp  Name_1_0.h  Name_1_0.hpp  Value_1_0.h  Value_1_0.hpp
src/uavcan/diagnostic/: Record_1_0.h  Record_1_0.hpp  Record_1_1.h  Record_1_1.hpp  Record_1_1.py  Severity_1_0.hpp  Severity_1_0.py  __init__.py
src/uavcan/file/: Error_1_0.h  Error_1_0.hpp  Error_1_0.py  GetInfo_0_1.h  GetInfo_0_1.hpp  GetInfo_0_1.py  GetInfo_0_2.h  GetInfo_0_2.hpp  GetInfo_0_2.py  List_0_1.h  List_0_1.hpp  List_0_2.h  List_0_2.hpp  List_0_2.py  Modify_1_0.hpp  Modify_1_0.py  Modify_1_1.h  Modify_1_1.hpp  Modify_1_1.py  Path_1_0.h  Path_1_0.hpp  Path_1_0.py  Path_2_0.hpp  Path_2_0.py  Read_1_0.h  Read_1_0.hpp  Read_1_0.py  Read_1_1.h  Read_1_1.hpp  Read_1_1.py  Write_1_0.h  Write_1_0.hpp  Write_1_0.py  Write_1_1.h  Write_1_1.hpp  Write_1_1.py  __init__.py
src/uavcan/internet/: __init__.py
src/uavcan/metatransport/: __init__.py
src/uavcan/node/: ExecuteCommand_1_0.h  ExecuteCommand_1_0.hpp  ExecuteCommand_1_0.py  ExecuteCommand_1_1.h  ExecuteCommand_1_1.hpp  ExecuteCommand_1_1.py  ExecuteCommand_1_2.h  ExecuteCommand_1_2.hpp  ExecuteCommand_1_2.py  ExecuteCommand_1_3.hpp  GetInfo_1_0.h  GetInfo_1_0.hpp  GetInfo_1_0.py  GetTransportStatistics_0_1.h  GetTransportStatistics_0_1.hpp  GetTransportStatistics_0_1.py  Health_1_0.hpp  Health_1_0.py  Heartbeat_1_0.h  Heartbeat_1_0.hpp  ID_1_0.h  ID_1_0.hpp  ID_1_0.py  IOStatistics_0_1.h  IOStatistics_0_1.hpp  Mode_1_0.h  Mode_1_0.hpp  Mode_1_0.py  Version_1_0.h  Version_1_0.hpp  Version_1_0.py  __init__.py
src/uavcan/pnp/: NodeIDAllocationData_1_0.h  NodeIDAllocationData_1_0.hpp  NodeIDAllocationData_1_0.py  NodeIDAllocationData_2_0.h  NodeIDAllocationData_2_0.hpp  __init__.py
(+1185 files in other folders)
